--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta property="og:type" content="website">
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
-
-
-
-
-    <title>Public Mint Pionears NFT</title>
+<meta name="viewport" content="width=device-width"/><meta charSet="utf-8"/><title>Antisocial Ape Club #3247 — Paras</title><meta name="description" content="Antisocial Ape Club #3247 from collection null by asac.near. A collection of 3333 unique, randomly generated pixel art ape NFTs stored on the NEAR blockchain."/><meta name="twitter:title" content="Antisocial Ape Club #3247 — Paras"/><meta name="twitter:card" content="summary_large_image"/><meta name="twitter:site" content="@ParasHQ"/><meta name="twitter:description" content="Antisocial Ape Club #3247 from collection null by asac.near. A collection of 3333 unique, randomly generated pixel art ape NFTs stored on the NEAR blockchain."/><meta name="twitter:image" content="https://paras-cdn.imgix.net/7923c301ea358dfcef5fb54edc3466cb28b156f7?w=800&amp;auto=format,compress"/><meta property="og:type" content="website"/><meta property="og:title" content="Antisocial Ape Club #3247 - Paras"/><meta property="og:site_name" content="Antisocial Ape Club #3247 — Paras"/><meta property="og:description" content="Antisocial Ape Club #3247 from collection null by asac.near. A collection of 3333 unique, randomly generated pixel art ape NFTs stored on the NEAR blockchain."/><meta property="og:image" content="https://paras-cdn.imgix.net/7923c301ea358dfcef5fb54edc3466cb28b156f7?w=800&amp;auto=format,compress"/><meta name="next-head-count" content="14"/>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
